# mlops_project_mariam_fatima

./: .gitignore  README.md  alert_rules.yml  alertmanager.yml  docker-compose.yaml  dockerfile  input_data.json  prometheus.yml  pyproject.toml  tasks.py  trained_model.pkl
.github/workflows/: ci.yml
config/: config_dev.yaml
doc/: air_pollution.html  index.html  search.js
doc/air_pollution/: config.html  data_loader.html  endpoints.html  main.html  model.html  scripts.html
doc/air_pollution/endpoints/: health.html  inference_pipeline.html  train_pipeline.html
doc/air_pollution/scripts/: inference.html  train.html
src/air_pollution/: config.py  main.py
src/air_pollution/data_loader/: __init__.py  base_loader.py  csv_loader.py  factory.py  json_loader.py
src/air_pollution/data_pipeline/: label_encoder.py  preprocessing.py
src/air_pollution/data_pipeline/data_transformer/: base_transformer.py  factory.py  minmax_scaler_transformer.py  standard_scaler_transformer.py
src/air_pollution/endpoints/: health.py  inference_pipeline.py  train_pipeline.py
src/air_pollution/model/: __init__.py  base_model.py  factory.py  logistic_model.py  tree_model.py
src/air_pollution/scripts/: inference.py  train.py
tests/: test_data_loader.py  test_data_transformer.py  test_label_encoder.py  test_model.py  test_preprocessing.py
trained_model/: trained_model.pkl
